--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kaio05.github.io/costs",
+  "homepage": "https://kaio05.github.io/costs/#",
   "name": "costs",
   "version": "0.1.0",
   "private": true,
